Sound MainMenu and playlist in game

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -190,7 +190,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Entities/Boosts
+ContentBrowserTab1.SelectedPaths=/Game/_Data/Music
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSize=2
@@ -226,7 +226,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Sounds
+ContentBrowserDrawer.SelectedPaths=/Game/_Data/Music
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -273,29 +273,30 @@ RotatingMovementComponent="\"Object\" "
 BP_ThirdPersonCharacter_C=
 Character=
 Pawn=
+SoundNodeModulator="\"Object\" "
+SoundNodeRandom="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=SoundCueEditor
+RecentAssetEditors=SoundCueEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=SoundCueEditor
+RecentAssetEditors=SoundCueEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=SoundCueEditor
-RecentAssetEditors=SoundCueEditor
-RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Sounds/Bounce_Cue.Bounce_Cue
-OpenAssetsAtExit=/Game/Sounds/Roll_Cue.Roll_Cue
-OpenAssetsAtExit=/Game/Entities/Boosts/BP_Powerup_Velocity.BP_Powerup_Velocity
-OpenAssetsAtExit=/Game/Entities/Boosts/BP_Powerup_HighJump.BP_Powerup_HighJump
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Entities/Boosts/BP_Powerup_HighJump
-MRUItem1=/Game/Entities/Boosts/BP_Powerup_Velocity
-MRUItem2=/Game/Objects/_fbx/MadeByJawns_ItchIO_GameItems_v1_0_1_Lightning
-MRUItem3=/Game/Sounds/Roll_Cue
-MRUItem4=/Game/Sounds/Bounce_Cue
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/_Data/Music/SW_PlayList
+MRUItem1=/Game/_Data/Music/SW_MainMenu
+MRUItem2=/Game/Entities/Boosts/BP_Powerup_HighJump
+MRUItem3=/Game/Entities/Boosts/BP_Powerup_Velocity
+MRUItem4=/Game/Sounds/Roll_Cue
+MRUItem5=/Game/Sounds/Bounce_Cue
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem7=/Game/Objects/_fbx/MadeByJawns_ItchIO_GameItems_v1_0_1_Lightning
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -584,6 +585,8 @@ BP_Powerup_HighJump_C.WorldPartition=True
 BP_Powerup_HighJump_C.Events=True
 BP_Powerup_HighJump_C.TransformCommon=True
 BP_Powerup_HighJump_C.Networking=True
+SoundNodeModulator.Modulation=True
+SoundNodeRandom.Random=True
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -596,6 +599,8 @@ PreserveScaleRatio=True
 /Game/Objects/_fbx/MadeByJawns_ItchIO_GameItems_v1_0_1_Lightning.MadeByJawns_ItchIO_GameItems_v1_0_1_Lightning=1
 /Game/Entities/Boosts/BP_Powerup_Velocity.BP_Powerup_Velocity=1
 /Game/Entities/Boosts/BP_Powerup_HighJump.BP_Powerup_HighJump=1
+/Game/_Data/Music/SW_MainMenu.SW_MainMenu=1
+/Game/_Data/Music/SW_PlayList.SW_PlayList=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1796,6 +1801,7 @@ BP_ThirdPersonCharacter_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovem
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+SkeletalMeshComponent=
 
 [Interchange_StackName__Assets__PipelineClassName_InterchangeGenericMaterialPipeline]
 bImportMaterials=True
