--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -167,7 +167,7 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Models/Structures/Docks/DockJunction
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -380,7 +380,7 @@ FoliageType_InstancedStaticMesh="\"Object\" "
 FoliageType="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1931,7 +1931,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=586.667 Y=466.667
-WindowSize=X=1292.000 Y=732.000
+WindowSize=X=1294.000 Y=734.000
 InitiallyMaximized=True
 
 [Directories2]
