--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -135,3 +135,8 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=DynamicModifiersOnly
+
