--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,7 +15,7 @@ GameDefaultMap=/Game/ThirdPerson/Maps/MenuLevel.MenuLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
-GameInstanceClass=/Game/ThirdPerson/Maps/BP_MyGameInstance.BP_MyGameInstance_C
+GameInstanceClass=/Script/Engine.GameInstance
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
